chore: configuração custom do tailwind e adicionando os icones, images e logos.

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
 @import "tailwindcss";
+
+@theme {
+  --color-*: initial;
+  --color-white: #fff;
+  --color-black: #000;
+  /* Brand */
+  --color-blue-dark: #2e3da3;
+  --color-blue-base: #5165e1;
+  --color-blue-light: #8996eb;
+
+  /* Grayscale */
+  --color-gray-100: #151619;
+  --color-gray-200: #1e2024;
+  --color-gray-300: #535964;
+  --color-gray-400: #858b99;
+  --color-gray-500: #e3e5e8;
+  --color-gray-600: #f9fafa;
+
+  /* Feedback */
+  --color-feedback-danger: #d03e3e;
+  --color-feedback-open: #cc3d6a;
+  --color-feedback-progress: #355ec5;
+  --color-feedback-done: #508b26;
+
+  /* Font */
+  --font-sans: "Lato", sans-serif;
+}
